# video-features

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stat.json
apps/: CMakeLists.txt
apps/feature_generator/: CMakeLists.txt  main.cpp
apps/feature_generator/include/: app.hpp  gop_dispenser.hpp  gop_distributor.hpp  processor.hpp  yuv_reader.h
apps/feature_generator/sources/: app.cpp  gop_dispenser.cpp  gop_distributor.cpp  processor.cpp  yuv_reader.cpp
apps/feature_unit_tester/: CMakeLists.txt
apps/feature_unit_tester/include/: test_glcm.hpp  test_ncc.hpp  test_tc.hpp
apps/feature_unit_tester/sources/: test_glcm.cc  test_ncc.cc  test_tc.cc
libs/: CMakeLists.txt
libs/armadillo/: CMakeLists.txt
libs/armadillo/include/armadillo_bits/: config.hpp
libs/armadillo/lib/: libarmadillo.so.12  libarmadillo.so.12.8.2
libs/armadillo/lib/pkgconfig/: armadillo.pc
libs/armadillo/share/Armadillo/CMake/: ArmadilloConfig.cmake  ArmadilloConfigVersion.cmake  ArmadilloLibraryDepends-noconfig.cmake  ArmadilloLibraryDepends.cmake
libs/common/: CMakeLists.txt
libs/common/include/: StopWatch.hpp  YuvReader.h  common_utils.h  program_options_lite.h  thread_pool.hpp
libs/common/sources/: YuvReader.cpp  common_utils.cpp  program_options_lite.cpp
libs/features/: CMakeLists.txt
libs/features/include/: glcm.h  nlp.h  pca.h
libs/features/sources/: glcm.cpp  nlp.cpp  pca.cpp  tc.cpp
libs/glcm/: CMakeLists.txt
libs/libmath/: CMakeLists.txt
libs/libmath/include/: mathUtil.h
libs/libmath/sources/: mathUtil.cpp
libs/ncc/: CMakeLists.txt
libs/ncc/include/: ncc.h
libs/ncc/sources/: ncc.cpp
libs/tc-freq/: CMakeLists.txt
libs/tc-freq/include/: tc.h
libs/tc-freq/sources/: tc.cpp
libs/xsimd/: CMakeLists.txt
libs/xsimd/lib/cmake/xsimd/: xsimdConfigVersion.cmake  xsimdTargets.cmake
libs/xsimd/lib/pkgconfig/: xsimd.pc
scripts/: opencv_install.sh
tests/: glcm.ipynb  ncc.ipynb  of.ipynb  requirements.txt  tc.ipynb
tests/dataset/DAVIS/: README.md  SOURCES.md
